--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Nicholas Decheine Website
+site_name: Nicholas Decheine
 repo_url: https://decheine.github.io/decheine-site
 site_dir: public
 
